Updated a ton of things

--- a/24410.html
+++ b/24410.html
@@ -1,34 +1,21 @@
 <main class="wrapper">
     <div id="serviceDetails" class="col-xs-12">
-        <h1 id="serviceHeader">General Licence - Victoria</h1>
+        <h1 id="serviceHeader">National Police Certificate - Victoria</h1>
         <div id="summary">
             <div id="serviceDetailDescription" class="serviceSection">
                 <h2>Description</h2>
                 <p>
-                    <p>You will require this licence if you operate a business and you intend to provide alcohol to your customers. This applies to pubs, hotels and holiday resorts, as well as other businesses that supply alcohol to customers. A general licence authorises you to:</p>
+                    <p>A National Police Certificate is a full record of your criminal history. It displays all releasable court outcomes (sentences, convictions and findings of guilt) from all Australian States and Territories.</p>
                     <p></p>
-                    <ul>
-                        <li>supply liquor to customers on your premises during ordinary trading hours for consumption on and off the premises</li>
-                        <li>supply liquor at any time to a resident, or guest of a resident, of the licensed premises</li>
-                        <li>supply liquor to guests</li>
-                    </ul>
-                    <p>Liquor must not be supplied on ANZAC day between 5am and 12noon.</p>
+                    <p>Many regulators will require you to provide a National Police Certificate as part of the application process for a licence, registration or other approval. Employers or volunteer organisations may also require you to provide a National Police Certificate before you commence employment or volunteer work.</p>
                     <p></p>
-                    <p>The following types of businesses are exempt from holding this licence, providing that certain conditions are complied with:</p>
+                    <p>An application may be made by you as an individual, or on behalf of the organisation that requires the information (with your consent).</p>
                     <p></p>
-                    <ul>
-                        <li>bed and breakfast businesses</li>
-                        <li>florists</li>
-                        <li>giftmakers</li>
-                        <li>hairdressers</li>
-                        <li>butchers</li>
-                        <li>hospitals</li>
-                        <li>residential care services</li>
-                        <li>retirement villages
-                            <br />
-                        </li>
-                        <li>cruise ships.</li>
-                    </ul>
+                    <p>Victoria Police will conduct nation-wide name checks and deliver the results to you or the organisation requiring the information. Generally, information, such as an individual&#39;s criminal history, cannot be released by Victoria Police to an organisation without written consent, and strict guidelines apply to the release of criminal history information to any individual or organisations.</p>
+                    <p></p>
+                    <p>Please read the Information Release Policy to be aware of the information released as a result of the check.</p>
+                    <p></p>
+                    <p>Victoria Police does not conduct checks for overseas applicants or applicants for residency or citizenship. These applicants must apply to the Australian Federal Police (AFP). Please visit the Australian Federal Police website for further details.</p>
                 </p>
             </div>
 
@@ -48,26 +35,11 @@
                 </div>
                 <div class="col-sm-9">
                     <p>
-                        <p>To be eligible for this licence you must:</p>
+                        <p>In order to obtain a National Police Certificate you must complete and sign the appropriate application form, called Consent to Check and Release National Police Record, and pay a fee.</p>
                         <p></p>
-                        <ul>
-                            <li>be at least 18 years old, If you are applying as an individual</li>
-                            <li>not be disqualified from holding a licence or BYO permit under the Act</li>
-                            <li>consent to a national police check</li>
-                            <li>complete the relevant forms</li>
-                            <li>provide any additional information required by the agency;</li>
-                        </ul>
-                        <p>Please note that the agency may refuse to grant a licence if:</p>
+                        <p>A 100-point identification check is required and an authorised certifier is needed to witness and certify identity documents and signature of the applicant.</p>
                         <p></p>
-                        <ul>
-                            <li>it would detract from the amenity of the area in which your premises are located</li>
-                            <li>it would encourage the misuse or abuse of alcohol</li>
-                            <li>you, or the directors of your organisation do not have sufficient knowledge of liquor licensing law
-                                <br />
-                            </li>
-                            <li>you, or your organisation, are not suitable to hold a licence.</li>
-                        </ul>
-                        <p>Please consult the Agency for further information and advice.</p>
+                        <p>Please read the associated documents for instructions and extensive information about the process involved.</p>
                     </p>
                 </div>
             </div>
@@ -78,16 +50,7 @@
                 </div>
                 <div class="col-sm-9">
                     <p>
-                        <p>Ongoing requirements include:</p>
-                        <p></p>
-                        <ul>
-                            <li>compliance with all relevant provisions of the applicable planning scheme</li>
-                            <li>if the licence is held by a corporation or other organisation, all directors of the organisation must be approved by the Agency
-                                <br />
-                            </li>
-                            <li>the supply of alcohol for consumption off the licensed premises must not be the whole of your ordinary business of supplying alcohol.</li>
-                        </ul>
-                        <p>Venues that host sexually explicit entertainment are subject to additional requirements. You must notify the agency in writing within 21 days of starting to provide sexually explicit entertainment on your premises.</p>
+                        <p>Once a National Police Certificate has been issued it is subject to national privacy laws and must not be used for purposes other than that for which it was issued.</p>
                     </p>
                 </div>
             </div>
@@ -98,18 +61,10 @@
                     <h3>Duration</h3>
                 </div>
                 <div class="col-sm-9">
-                    <p>12 months or from date granted until end of that calendar year.</p>
+                    <p>A National Police Certificate is current only at the date of issue.</p>
                 </div>
             </div>
 
-            <div id="serviceDetailExpiry" class="serviceSection">
-                <div class="col-sm-3">
-                    <h3>Expiry</h3>
-                </div>
-                <div class="col-sm-9">
-                    <p>31 December each year.</p>
-                </div>
-            </div>
             <div id="ServiceFeesContainer" class="serviceSection">
                 <div class="col-sm-3">
                     <h3>Fees</h3>
@@ -135,57 +90,80 @@
                                     Application
                                 </td>
                                 <td data-label="Amount" class="amount">
-                                    $452.20
+                                    $46.00
                                 </td>
                                 <td data-label="Description" class="description">
-                                    <p>Fees for 2016-17.</p>
+                                    <p>Name only. Fees for 2016-17.
+                                        <br />
+                                    </p>
                                 </td>
                             </tr>
                             <tr>
                                 <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Renew
+                                    Apply
                                 </td>
                                 <td data-label="Type">
-                                    Renewal
+                                    Application
                                 </td>
                                 <td data-label="Amount" class="amount">
-                                    -
+                                    $179.80
                                 </td>
                                 <td data-label="Description" class="description">
-                                    <p>Please consult the responsible agency for information on fees to be submitted with your application.</p>
+                                    Name and fingerprint check. Fees for 2016-17.
                                 </td>
                             </tr>
                             <tr>
                                 <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Transfer
+                                    Apply
                                 </td>
                                 <td data-label="Type">
-                                    Transfer
+                                    Application
                                 </td>
                                 <td data-label="Amount" class="amount">
-                                    $203.80
+                                    $47.40
                                 </td>
                                 <td data-label="Description" class="description">
-                                    <p>Fees for 2016-17.</p>
+                                    Ink fingerprints (one set). Fees for 2016-17.
                                 </td>
                             </tr>
                             <tr>
                                 <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Vary
+                                    Apply
                                 </td>
                                 <td data-label="Type">
-                                    Variation
+                                    Application
                                 </td>
                                 <td data-label="Amount" class="amount">
-                                    $203.80
+                                    $66.90
                                 </td>
                                 <td data-label="Description" class="description">
-                                    <p>Fees for 2016-17.</p>
+                                    <p>Ink fingerprints (two sets). Fees for 2016-17.</p>
                                 </td>
                             </tr>
-
+                            <tr>
+                                <td data-label="Task" id="ServiceTaskTypeDisplayName">
+                                    Apply
+                                </td>
+                                <td data-label="Type">
+                                    Application
+                                </td>
+                                <td data-label="Amount" class="amount">
+                                    $86.40
+                                </td>
+                                <td data-label="Description" class="description">
+                                    <p>Ink fingerprints (three sets). Fees for 2016-17.</p>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
+                </div>
+            </div>
+            <div id="serviceDetailApprovedTime" class="serviceSection">
+                <div class="col-sm-3">
+                    <h3>Approved Time</h3>
+                </div>
+                <div class="col-sm-9">
+                    <p>Please allow a minimum of 10 working days for your application to be processed.</p>
                 </div>
             </div>
 
@@ -198,7 +176,7 @@
                         <p id="contactDetailsTableSummary" class="sr-only" aria-live="polite">Contact Email, Phone and Address Details for this service in simple two column table format, header then data.</p>
                         <table title="Contact Details for this service" aria-describedby="contactDetailsTableSummary">
                             <caption>
-                                <div class="orgName">Licensing Officer
+                                <div class="orgName">Enquiries Officer
                                 </div>
                                 <span class="subOrgName">
                                     
@@ -213,7 +191,6 @@
 
                 </div>
             </div>
-
         </div>
         <div class="controls-container">
             <div class="controls-content">
