--- a/28954.html
+++ b/28954.html
@@ -1,18 +1,42 @@
 <main class="wrapper">
     <div id="serviceDetails" class="col-xs-12">
-        <h1 id="serviceHeader">BYO Permit - Victoria</h1>
+        <h1 id="serviceHeader">Registration / Notification of Fixed Food Premises - Victoria</h1>
         <div id="summary">
             <div id="serviceDetailDescription" class="serviceSection">
                 <h2>Description</h2>
                 <p>
-                    <p>You will require this permit if you operate a restaurant, club or party bus and you intend to allow customers to consume their own alcohol on the premises.</p>
-                    <p></p>
-                    <p>Unlike a liquor licence, a BYO permit does not allow you to supply alcohol to your customers. If you supply your customers with alcohol, you will need a liquor licence.</p>
-                    <p></p>
-                    <p>A BYO permit is only available to restaurants, clubs and party buses. Any bus that is operated or hired out commercially, and is pre-booked for passengers is classified as a party bus.</p>
-                    <p></p>
-                    <p>Supplying alcohol (including BYO service) is prohibited on ANZAC day between the hours of 3am and 12noon.</p>
-                </p>
+                    <p>
+
+                        You will require this registration / notification if you intend to operate a food business (meaning a business, enterprise or activity) from a fixed (permanent) premise in any commercial, charitable or community circumstance, including on a one-off basis, involving the handling of food intended for sale or the sale of food for human consumption.
+                        <br />
+                    </p>
+                    <p>The types of premises covered include the whole or any part of a building, other permanent structure and / or pontoon.
+                        <br />
+                    </p>
+                    <p>Food includes any product intended for human consumption (whether it is live, raw, prepared or partly prepared but excluding a therapeutic good) and may also include live animals and plants.
+                        <br />
+                    </p>
+                    <p>There are four classes of food premises: class 1 (highest risk), class 2, class 3 and class 4 (lowest risk). The purpose of the classification system is to ensure that the level of regulation is better matched to the level of food safety risk associated with the food handling activities at different types of premises. The greater the chance of something going wrong during the food handling process, and the greater the potential impact on people?s health, the higher the level of regulation.
+                        <br />
+                    </p>
+                    <p>The system sets out different food safety requirements for each class based on the food safety risks of its highest risk food handling activity. The classes are:
+                        <br />
+                    </p>
+                    <ul>
+                        <li>Class 1: Hospitals, child care centres and listed facilities for the aged, at which ready to eat potentially hazardous food is served</li>
+                        <li>Class 2: Other premises that handle potentially hazardous unpackaged foods</li>
+                        <li>Class 3: Premises handling unpackaged low risk foods, selling potentially hazardous pre-packaged foods, or the warehousing or distribution of pre-packaged foods
+                            <br />
+                        </li>
+                    </ul>
+                    <p>and
+                        <br />
+                    </p>
+                    <ul>
+                        <li>Class 4: Premises that only handle pre-packaged low risk foods, and certain other low risk or occasional activities.
+                            <br />
+                        </li>
+                    </ul>Class 1, 2 and 3 premises must be registered. Class 4 premises must be notified. Notification is for premises with the lowest risk food handling, and is once-off, with no fee payable.</p>
             </div>
 
             <div id="serviceDetailType" class="serviceSection">
@@ -25,23 +49,22 @@
                 </div>
             </div>
 
-
             <div id="serviceDetailEligibilityRequirements" class="serviceSection">
                 <div class="col-sm-3">
                     <h3>Eligibility Requirements</h3>
                 </div>
                 <div class="col-sm-9">
                     <p>
-                        <p>To be eligible for this permit you must:</p>
+                        <p>To be eligible for this registration / notification you must:</p>
                         <p></p>
                         <ul>
-                            <li>be at least 18 years old</li>
-                            <li>be a suitable person to hold a BYO Permit
-                                <br />
-                            </li>
-                            <li>not be disqualified from holding a liquor licence or BYO permit.</li>
+                            <li>Have a fixed or permanent food premises;</li>
+                            <li>Provide a Food Safety Program with your application (if class 2);</li>
+                            <li>Meet any other requirements that apply under the Food Act, as explained to you by the council;</li>
+                            <li>Make an application for registration to the relevant Council in the approved form; and</li>
+                            <li>Pay the fees (if any) as determined by the relevant council.</li>
                         </ul>
-                        <p>You must make an application to the agency by completing the application kit. Please provide any additional information requested by the agency and pay the required fees.</p>
+                        <p>Please consult the responsible council for more information regarding eligibility requirements.</p>
                     </p>
                 </div>
             </div>
@@ -52,18 +75,11 @@
                 </div>
                 <div class="col-sm-9">
                     <p>
-                        <p>Any variation, relocation, transfer or surrender of a BYO Permit must be approved and endorsed by the Director of Liquor Licensing.</p>
+                        <p>Additional registration or approvals may be required (for example, planning), and you may be subject to third party auditing.</p>
                         <p></p>
-                        <p>Ongoing requirements include:</p>
+                        <p>You must comply with all conditions, requirements or obligations imposed by the Council or under the Act or Regulations, including the Food Standards Code, Food Safety Program, Council Inspections and labelling requirements.</p>
                         <p></p>
-                        <ul>
-                            <li>compliance with the applicable planning scheme</li>
-                            <li>if the permit is held by a corporation or other organisation, all directors must be approved by the agency
-                                <br />
-                            </li>
-                            <li>compliance with permit conditions.</li>
-                        </ul>
-                        <p>Failure to comply may result in the permit being suspended or cancelled.</p>
+                        <p>Failure to comply may result in your registration being revoked or suspended.</p>
                     </p>
                 </div>
             </div>
@@ -74,18 +90,10 @@
                     <h3>Duration</h3>
                 </div>
                 <div class="col-sm-9">
-                    <p>12 months or from date granted until end of that calendar year.</p>
+                    <p>One year - annual renewal is required.</p>
                 </div>
             </div>
 
-            <div id="serviceDetailExpiry" class="serviceSection">
-                <div class="col-sm-3">
-                    <h3>Expiry</h3>
-                </div>
-                <div class="col-sm-9">
-                    <p>31 December each year.</p>
-                </div>
-            </div>
             <div id="ServiceFeesContainer" class="serviceSection">
                 <div class="col-sm-3">
                     <h3>Fees</h3>
@@ -111,49 +119,21 @@
                                     Application
                                 </td>
                                 <td data-label="Amount" class="amount">
-                                    $243.00
-                                </td>
-                                <td data-label="Description" class="description">
-                                    <p>Fees for 2016-17.</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Renew
-                                </td>
-                                <td data-label="Type">
-                                    Renewal
-                                </td>
-                                <td data-label="Amount" class="amount">
                                     -
                                 </td>
                                 <td data-label="Description" class="description">
-                                    <p>Please consult the responsible agency for information on fees to be submitted with your application.</p>
+                                    <p>Fees vary between $248 and $1280 according to the class of your business, please consult the responsible council for information on the correct fees to be submitted with your application. Fees for 2016-17.</p>
                                 </td>
                             </tr>
                             <tr>
                                 <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Transfer
+                                    Apply
                                 </td>
                                 <td data-label="Type">
                                     Transfer
                                 </td>
                                 <td data-label="Amount" class="amount">
-                                    $203.80
-                                </td>
-                                <td data-label="Description" class="description">
-                                    <p>Fees for 2016-17.</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Vary
-                                </td>
-                                <td data-label="Type">
-                                    Variation
-                                </td>
-                                <td data-label="Amount" class="amount">
-                                    $203.80
+                                    $342.00
                                 </td>
                                 <td data-label="Description" class="description">
                                     <p>Fees for 2016-17.</p>
@@ -174,7 +154,7 @@
                         <p id="contactDetailsTableSummary" class="sr-only" aria-live="polite">Contact Email, Phone and Address Details for this service in simple two column table format, header then data.</p>
                         <table title="Contact Details for this service" aria-describedby="contactDetailsTableSummary">
                             <caption>
-                                <div class="orgName">Licensing Officer
+                                <div class="orgName">Health Services Officer
                                 </div>
                                 <span class="subOrgName">
                                     
@@ -189,6 +169,7 @@
 
                 </div>
             </div>
+
 
         </div>
         <div class="controls-container">
