--- a/advertising.html
+++ b/advertising.html
@@ -1,19 +1,5 @@
-<div id="alcohol">
-    <h2>Selling Alcohol <span class="resultCount">(4 Results)</span></h2>
-
-    <div class="serviceTile">
-        <button id="23998" class="servicePreview">
-            <h3 class="serviceName">On-Premises Licence - Victoria</h3>
-            <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
-            <shortdesc>
-                <p>You will require this licence if you operate a business or club that supplies alcohol for consumption on the premises.</p>
-            </shortdesc>
-        </button>
-
-        <div class="sub-actions">
-            <a href="#" class="add">Add to pack</a>
-        </div>
-    </div>
+<div id="advertising">
+    <h2>Advertising & Signs <span class="resultCount">(3 Results)</span></h2>
 
     <div class="serviceTile">
         <button id="24001" class="servicePreview">
