--- a/productsandservices.html
+++ b/productsandservices.html
@@ -1,5 +1,5 @@
-<div id="alcohol">
-    <h2>Selling Alcohol <span class="resultCount">(4 Results)</span></h2>
+<div id="productsAndServices">
+    <h2>Products & Services <span class="resultCount">(7 Results)</span></h2>
 
     <div class="serviceTile">
         <button id="23998" class="servicePreview">
