--- a/26183.html
+++ b/26183.html
@@ -1,17 +1,13 @@
 <main class="wrapper">
     <div id="serviceDetails" class="col-xs-12">
-        <h1 id="serviceHeader">BYO Permit - Victoria</h1>
+        <h1 id="serviceHeader">Permit to Place Signs - Victoria</h1>
         <div id="summary">
             <div id="serviceDetailDescription" class="serviceSection">
                 <h2>Description</h2>
                 <p>
-                    <p>You will require this permit if you operate a restaurant, club or party bus and you intend to allow customers to consume their own alcohol on the premises.</p>
+                    <p>You will require this licence if you intend to erect, place or remove an advertising sign, banner or notice on a building, road or footpath. For example, approval may be required for the placement of A-frame sandwich boards, business signage on a building, temporary or movable / mobile signs. Signs also include banners or flag-like materials and signs affixed to buildings, fences, trees and other council property.</p>
                     <p></p>
-                    <p>Unlike a liquor licence, a BYO permit does not allow you to supply alcohol to your customers. If you supply your customers with alcohol, you will need a liquor licence.</p>
-                    <p></p>
-                    <p>A BYO permit is only available to restaurants, clubs and party buses. Any bus that is operated or hired out commercially, and is pre-booked for passengers is classified as a party bus.</p>
-                    <p></p>
-                    <p>Supplying alcohol (including BYO service) is prohibited on ANZAC day between the hours of 3am and 12noon.</p>
+                    <p>Approval may also be required for the use of commercial signage mounted on vehicles and / or trailers. It is recommended that you contact your local council prior to erecting, placing or affixing any type of signage</p>
                 </p>
             </div>
 
@@ -32,41 +28,11 @@
                 </div>
                 <div class="col-sm-9">
                     <p>
-                        <p>To be eligible for this permit you must:</p>
-                        <p></p>
-                        <ul>
-                            <li>be at least 18 years old</li>
-                            <li>be a suitable person to hold a BYO Permit
-                                <br />
-                            </li>
-                            <li>not be disqualified from holding a liquor licence or BYO permit.</li>
-                        </ul>
-                        <p>You must make an application to the agency by completing the application kit. Please provide any additional information requested by the agency and pay the required fees.</p>
+                        <p>Please consult the responsible council for more information regarding eligibility requirements.</p>
                     </p>
                 </div>
             </div>
 
-            <div id="serviceDetailOngoingEligibility" class="serviceSection">
-                <div class="col-sm-3">
-                    <h3>Ongoing Eligibility Requirements</h3>
-                </div>
-                <div class="col-sm-9">
-                    <p>
-                        <p>Any variation, relocation, transfer or surrender of a BYO Permit must be approved and endorsed by the Director of Liquor Licensing.</p>
-                        <p></p>
-                        <p>Ongoing requirements include:</p>
-                        <p></p>
-                        <ul>
-                            <li>compliance with the applicable planning scheme</li>
-                            <li>if the permit is held by a corporation or other organisation, all directors must be approved by the agency
-                                <br />
-                            </li>
-                            <li>compliance with permit conditions.</li>
-                        </ul>
-                        <p>Failure to comply may result in the permit being suspended or cancelled.</p>
-                    </p>
-                </div>
-            </div>
 
 
             <div id="serviceDetailDuration" class="serviceSection">
@@ -74,18 +40,10 @@
                     <h3>Duration</h3>
                 </div>
                 <div class="col-sm-9">
-                    <p>12 months or from date granted until end of that calendar year.</p>
+                    <p>Duration does not exceed 12 months.</p>
                 </div>
             </div>
 
-            <div id="serviceDetailExpiry" class="serviceSection">
-                <div class="col-sm-3">
-                    <h3>Expiry</h3>
-                </div>
-                <div class="col-sm-9">
-                    <p>31 December each year.</p>
-                </div>
-            </div>
             <div id="ServiceFeesContainer" class="serviceSection">
                 <div class="col-sm-3">
                     <h3>Fees</h3>
@@ -111,49 +69,21 @@
                                     Application
                                 </td>
                                 <td data-label="Amount" class="amount">
-                                    $243.00
+                                    $266.00
                                 </td>
                                 <td data-label="Description" class="description">
-                                    <p>Fees for 2016-17.</p>
+                                    <p>This is made up of $84 application fee and $182 permit fee. Fees for 2016-17.</p>
                                 </td>
                             </tr>
                             <tr>
                                 <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Renew
+                                    Apply
                                 </td>
                                 <td data-label="Type">
-                                    Renewal
+                                    Application
                                 </td>
                                 <td data-label="Amount" class="amount">
-                                    -
-                                </td>
-                                <td data-label="Description" class="description">
-                                    <p>Please consult the responsible agency for information on fees to be submitted with your application.</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Transfer
-                                </td>
-                                <td data-label="Type">
-                                    Transfer
-                                </td>
-                                <td data-label="Amount" class="amount">
-                                    $203.80
-                                </td>
-                                <td data-label="Description" class="description">
-                                    <p>Fees for 2016-17.</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td data-label="Task" id="ServiceTaskTypeDisplayName">
-                                    Vary
-                                </td>
-                                <td data-label="Type">
-                                    Variation
-                                </td>
-                                <td data-label="Amount" class="amount">
-                                    $203.80
+                                    $116.00
                                 </td>
                                 <td data-label="Description" class="description">
                                     <p>Fees for 2016-17.</p>
@@ -174,7 +104,7 @@
                         <p id="contactDetailsTableSummary" class="sr-only" aria-live="polite">Contact Email, Phone and Address Details for this service in simple two column table format, header then data.</p>
                         <table title="Contact Details for this service" aria-describedby="contactDetailsTableSummary">
                             <caption>
-                                <div class="orgName">Licensing Officer
+                                <div class="orgName">Local Laws Officer
                                 </div>
                                 <span class="subOrgName">
                                     
@@ -189,6 +119,7 @@
 
                 </div>
             </div>
+
 
         </div>
         <div class="controls-container">
