--- a/sellingfood.html
+++ b/sellingfood.html
@@ -1,5 +1,5 @@
-<div id="alcohol">
-    <h2>Selling Alcohol <span class="resultCount">(4 Results)</span></h2>
+<div id="sellingFood">
+    <h2>Selling Food <span class="resultCount">(4 Results)</span></h2>
 
     <div class="serviceTile">
         <button id="23998" class="servicePreview">
